--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
+    "angular-chart.js": "^1.1.1",
     "angular-route": "^1.5.8",
     "angularfire": "^2.0.2",
     "body-parser": "~1.13.2",
+    "chart.js": "^2.5.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
