--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "~4.13.1",
     "firebase": "^3.2.1",
     "morgan": "~1.6.1",
+    "ng-currency": "^1.2.5",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
